Update Groovy and surefire for Java 21